5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1662_2966.log
== TEST (2019-04-15 15:41:01) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int("Quantidade de ingressos comprados: ")

 

if( S == a.upper()):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int("Quantidade de ingressos comprados: ")
ValueError: invalid literal for int() with base 10: 'Quantidade de ingressos comprados: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:33) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 

if( S == a.upper()):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if( S == a.upper()):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:38) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 

if( S == a.upper()):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if( S == a.upper()):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:09) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( S == "a.upper()"):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( S == "a.upper()"):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:35) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( S == a):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( S == a):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:52) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( s == a):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( s == a):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:49) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( s == "a" ):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( s == "a" ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:13) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( a == s ):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( a == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:33) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 
if( a == s):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( a == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:12) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

 s = a
	
if( a == s):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
File "XXXX", line 5
    s = a
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:19) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

	
if( a = s):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
File "XXXX", line 6
    if( a = s):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:36) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

	
if( s == "a"):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if( s == "a"):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:04) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

	
if( "s" == a ):
	custo = b - (b * 20/100)
else: 
	custo = b

print(round(custo, 2))	

-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:08) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

	
if( "s" == a ):
	custo = b - (b * 0.2)
else: 
	custo = b

print(round(custo, 2))	

-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:59) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

	
if( "s" == a ):
	custo = b - (b * c * 0.2)
else: 
	custo = b

print(round(custo, 2))	

-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:32) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b

print(round(custo, 2))	

-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:45) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b

print(round(custo, 2))	

-- EXECUTION TIME:
0.202454
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
37.5
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
26.95
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
42.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:23) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))	

-- OUTPUT:
225.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:51:25) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))	

-- EXECUTION TIME:
0.199641
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
225.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:26) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))	

-- OUTPUT:
225.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:51:26) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))	

-- EXECUTION TIME:
0.152786
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
225.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
E mulher?(S/N) valor do ingresso: Quantidade de ingressos comprados: 127.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:51:47) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))	

-- EXECUTION TIME:
0.177558
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
225.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:12) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))

-- EXECUTION TIME:
0.174262
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
225.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:13) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "s" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))

-- OUTPUT:
225.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:27) 
-- CODE:
a = input("E mulher?(S/N) ")
b = float(input("valor do ingresso: "))
c = int(input("Quantidade de ingressos comprados: "))

preco = b * c

if( "S" == a ):
	custo = b*c - (preco * 0.2)
else: 
	custo = b * c

print(round(custo, 2))

-- EXECUTION TIME:
0.140245
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
